<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >


            <include layout="@layout/plugin_title" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/shop_two"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/getproduce"
                    android:textSize="@dimen/index_text_size_30px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gainsboro" />

            <LinearLayout
                android:id="@+id/shop_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goaddress"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ar_xian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/color5"
                        android:textSize="@dimen/index_text_size_28px" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/ar_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.1"
                            android:text=""
                            android:textColor="@color/color5"
                            android:textSize="@dimen/index_text_size_28px" />

                        <ImageView
                            android:id="@+id/iv_more"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.9"
                            android:src="@drawable/next" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/ar_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/color5"
                        android:textSize="@dimen/index_text_size_28px" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/shop_four"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/bg"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/orderdetail"
                        android:textSize="@dimen/index_text_size_30px" />
                </LinearLayout>

                <com.school.viewswitcher.ShowAllListView
                    android:id="@+id/listView_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:listSelector="@android:color/transparent"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:divider="@null"
                    android:dividerHeight="1dp"
                    android:scrollbars="none" >
                </com.school.viewswitcher.ShowAllListView>

                <LinearLayout
                    android:id="@+id/ll_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gainsboro" />

                    <LinearLayout
                        android:id="@+id/confirm_song"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.6"
                            android:padding="5dp"
                            android:text="@string/wuliu"
                            android:textSize="@dimen/index_text_size_30px" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.4"
                            android:text="@string/wuliuvalue"
                            android:textColor="@color/color5"
                            android:textSize="@dimen/index_text_size_30px" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gainsboro" />

                    <LinearLayout
                        android:id="@+id/confirm_fu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.6"
                            android:padding="5dp"
                            android:text="@string/moneytype"
                            android:textSize="@dimen/index_text_size_30px" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.4"
                            android:text="@string/qiantype"
                            android:textColor="@color/color5"
                            android:textSize="@dimen/index_text_size_30px" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gainsboro" />

                    <LinearLayout
                        android:id="@+id/shop_six"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingRight="5dp" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.4"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/gong"
                                android:textSize="@dimen/index_text_size_30px" />

                            <TextView
                                android:id="@+id/txt_total_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="2"
                                android:textColor="@color/fs"
                                android:textSize="@dimen/index_text_size_30px" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/jian"
                                android:textSize="@dimen/index_text_size_30px" />

                            <TextView
                                android:id="@+id/txt_total_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="¥680元"
                                android:textColor="@color/fs"
                                android:textSize="@dimen/index_text_size_30px" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/confirm_subit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|left"
                            android:layout_weight="0.7"
                            android:gravity="center" >

                            <TextView
                                android:id="@+id/txt_confirm_subit"
                                style="@style/bottom_button"
                                android:onClick="submit"
                                android:text="@string/submit" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>