<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <include layout="@layout/plugin_title"/>

    <RelativeLayout
        android:id="@+id/cart_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listView_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@android:color/transparent"
            android:divider="#00000000"
            android:dividerHeight="18dp" >
        </ListView>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/cart_oneg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="allsel"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/cart_all"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_cirle"
                            android:gravity="center_vertical" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/allse"
                            android:textColor="@color/txtj"
                            android:textSize="@dimen/index_text_size_32px" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/allprice"
                        android:textColor="@color/fs"
                        android:textSize="@dimen/index_text_size_32px" />

                    <TextView
                        android:id="@+id/txt_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="￥0.0"
                        android:textColor="@color/fs"
                        android:textSize="@dimen/index_text_size_32px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartconfim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:gravity="center" >

                    <TextView
                        android:onClick="cartconfim"
                        style="@style/bottom_button"
                        android:id="@+id/txt_confrim"
                        android:text="@string/gojie"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>